Updates to the location page: + New pictures for the "featured" and "hero" sections + Updated the "hero" text box to align with the new picture + "featured" content now has black bars to either side. + Both pictures' css changed so that they will retain the correct ratios

--- a/css/location.css
+++ b/css/location.css
@@ -1,8 +1,10 @@
 /*css for hero image*/
 img#hero{
   width: 100%;
-  height: 500px;
+  min-height: 400px;
+  height: auto;
 }
+
 div#heroText{
   background-color: #333; /*Black*/
   width: 25%;
@@ -19,13 +21,21 @@ div.main h1{
 }
 div#featured{
   margin: auto;
-  height: 400px; /*maches containing image*/
+  height: auto;
   background-color: #333; /*Black*/
+  width: 70%;
+  display: flex;
 }
 div#featured img{
-  padding: 0 25%; /*Temporary the image is not centered*/
-  width: 50%;
-  height: 400px;
+  display: block;
+   padding: 0 6%; /*Temporary the image is not centered*/
+   padding-bottom: 0px;
+   margin-bottom: 0px;
+  background-color: #833d46;
+  margin: 0 auto;
+  width: auto;
+  min-height: 400px;
+  
 }
 
 /*css for supporting images*/
